2001-05-24  Christian Stimming  <stimming@tuhh.de>

	* po/gnc-glossary.txt: added file for all our translators.

	* src/scm/report/average-balance.scm: made strings more
	consistent.

	* src/scm/options-utilities.scm: adjusted the upper bound for plot
	size.

	* src/gnome/dialog-column-view.c: use menu-name in report-list.

	* src/scm/report.scm (gnc:report-menu-name),
	(gnc:report-template-menu-name/name): added functions.

2001-05-24  Robert Graham Merkel  <rgmerk@mira.net>

	* doc/sgml/C/gnucash.sgml: add references to new files.

	* doc/sgml/C/xacc-quickstart.sgml: New file, new user
	documentation.

	* doc/sgml/C/xacc-features.sgml: New file, describing 
	the features of GnuCash.

	* doc/sgml/C/Makefile.am: update for new files.

	* lib/srfi/srfi-19.scm: revert to older version.

	* src/scm/tip-list.scm: more tips.

2001-05-23  Christian Stimming  <stimming@tuhh.de>

	* po/pt_PT.po: Duarte Loreto's updated translation.

	* src/scm/prefs.scm, options-utilities.scm: fix string. 

2001-05-23  Rob Browning  <rlb@cs.utexas.edu>

	* configure.in (AC_OUTPUT): remove src/scm/srfi/Makefile (again?).

	* src/scm/report/transaction-report.scm: add use-modules
	for syncase.

	* lib/srfi/srfi-19.scm: update to new guile-core version.  (Grab
	my fixes).

2001-05-23  Dave Peticolas  <dave@krondo.com>

	* src/doc/design/gnucash-design.texinfo: update docs

	* src/doc/design/engine.texinfo: update docs

	* src/gnome/window-reconcile.c (startRecnWindow): fix bug

	* src/scm/bootstrap.scm.in: fix test for slib

2001-05-22  Christian Stimming  <stimming@tuhh.de>

	* src/register/splitreg.c (configAction): fix comments for i18n.

2001-05-22  Dave Peticolas  <dave@krondo.com>

	* src/gnome/druid-qif-import.c: fix scrollbar bug. raise qif
	window to top

2001-05-21  Dave Peticolas  <dave@krondo.com>

	* src/gnome/window-main.c: remove cruft

	* src/gnome/new-user-callbacks.c: use gncp_new_user_finish

	* src/gnome/new-user-funs.c: finish new user choices dialog.